--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,9 @@
 {
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": false
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": false,
+  "printWidth": 80,
+  "importOrder": ["^react(.*)", "<THIRD_PARTY_MODULES>", "@src/(.*)", "^[./]"],
+  "importOrderSeparation": true
 }
