--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-ts-boilerplate",
+  "name": "react-typescript-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "Template for React/Typescript projects",
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server --mode=development --open --hot",
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -22,13 +23,13 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.1",
     "prettier": "^2.7.1",
@@ -36,7 +37,9 @@
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.7.3",
+    "typescript-plugin-css-modules": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
