--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,10 @@
 {
-  "trailingComma": "all",
+  "trailingComma": "none",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
   "printWidth": 80,
+  "arrowParens": "avoid",
   "importOrder": ["^react(.*)", "<THIRD_PARTY_MODULES>", "@src/(.*)", "^[./]"],
   "importOrderSeparation": true
 }
