--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^15.2.0",
+    "stylelint-config-clean-order": "^5.0.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^7.0.1",
     "ts-loader": "^9.3.0",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.7.3",
